# ml-failure-analysis-framework

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml  decision_costs.yaml  dev.yaml  prod.yaml  slices.yaml
data/: README.md
docs/: architecture.md  decision_framework.md  decisions.md  demo.md  evaluation_results.md  failure_cases.md  security.md  slicing_strategy.md  tradeoffs.md
evaluation/: bias_variance.py  decision_metrics.py  error_analysis.py  evaluate.py  model_comparison.py  slice_metrics.py
scripts/: prepare_data.py  run_all.py  run_api.py  run_eval.py  train_models.py
src/: __main__.py
src/api/: app.py  routes.py
src/datasets/: base.py  csv_classification.py  splits.py
src/decision_engine/: costs.py  thresholds.py
src/error_analysis/: analyzer.py
src/evaluation_engine/: evaluator.py  instability.py  metrics.py  predictions.py
src/ml_failure_analysis_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/models/: base.py  registry.py  sklearn_models.py
src/schemas/: api.py
src/slicing/: builder.py
src/utils/: config.py  io.py  logging.py  paths.py  random.py  typing.py
src/visualization/: plots.py
tests/: test_costs.py  test_metrics.py  test_slicing.py
